# transformers

./: .gitreview  README.md  setup.cfg
doc/: README
etc/transformers/: api-paste.ini  hybrid-transformers.conf  rootwrap.conf
etc/transformers/rootwrap.d/: transformers.filters
tools/: image2docker  image2docker.bak  install.sh  setup.sh  transformers-api  transformers-convert  transformers-rootwrap  uninstall.sh
transformers/: config.py  context.py  debugger.py  exception.py  i18n.py  manager.py  paths.py  policy.py  rpc.py  service.py  ssh_utils.py  utils.py  version.py  wsgi.py
transformers/api/: __init__.py  common.py  extensions.py  urlmap.py  versions.py  xmlutil.py
transformers/api/contrib/: __init__.py
transformers/api/middleware/: auth.py  catch_errors.py  fault.py  request_id.py  sizelimit.py
transformers/api/v1/: router.py  services.py
transformers/api/views/: services.py
transformers/api/wsgi/: __init__.py  wsgi.py
transformers/brick/: base.py  exception.py  executor.py
transformers/cmd/: all.py  api.py  convert.py
transformers/common/: _i18n.py  config.py  eventlet_backdoor.py  excutils.py  gettextutils.py  imageutils.py  jsonutils.py  lockutils.py  log.py  loopingcall.py  periodic_task.py  policy.py  processutils.py  service.py  strutils.py  threadgroup.py  versionutils.py
transformers/objects/: base.py  fields.py
transformers/s3/: __init__.py  s3.py  test.py
transformers/server/: api.py  manager.py  rpcapi.py
transformers/swift/: __init__.py  swift.py
