[metadata]
name = transformers
version = 2016.3
summary = OpenStack transformers service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    transformers

[files]
data_files =
    /etc/ = etc/*

[entry_points]
console_scripts =
    transformers-api = transformers.cmd.api:main
 
[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = transformers/locale
domain = transformers

[update_catalog]
domain = transformers
output_dir = transformers/locale
input_file = transformers/locale/transformers.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = transformers/locale/transformers.pot
